pulling chris's new observe end point, regenerating stubs and markdown
