# cp3/ta/swagger_server/swagger/swagger.yaml
@@ -80,6 +80,22 @@ paths:
           schema:
             $ref: "#/definitions/inline_response_400_2"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /action/observe:
+    get:
+      description: "observe some of the current state of the robot for visualization\
+        \ and invariant checking for perturbation end points. n.b. this information\
+        \ is to be used strictly in a passive way; it is not to be used for evaluation\
+        \ of the test at all."
+      operationId: "action_observe_get"
+      parameters: []
+      responses:
+        200:
+          description: "successfully computed the observation"
+          schema:
+            $ref: "#/definitions/inline_response_200_3"
+        400:
+          description: "encountered an error while computing the observation"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
 definitions:
   Parameters:
     type: "object"
@@ -145,6 +161,38 @@ definitions:
       sim-time:
         type: "integer"
         description: "the simulation time when the node failed"
+  inline_response_200_3:
+    required:
+    - "battery"
+    - "lights"
+    - "sim-time"
+    - "x"
+    - "y"
+    properties:
+      x:
+        type: "number"
+        format: "float"
+        description: "the current x coordinate of the bot. must be within the boundaries\
+          \ of the map."
+      y:
+        type: "number"
+        format: "float"
+        description: "the current y coordinate of the bot. must be within the boundaries\
+          \ of the map."
+      battery:
+        type: "integer"
+        description: "the current charge of the battery, in mWh"
+        minimum: 0
+      sim-time:
+        type: "integer"
+        description: "the time when this observation was computed, in simulation seconds"
+        minimum: 0
+      lights:
+        type: "array"
+        description: "the list of names from LIGHTSET of those lights which are currently\
+          \ turned on. all other lights are currently turned off."
+        items:
+          type: "string"
   inline_response_400_2:
     required:
     - "sim-time"
